--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Utility spacing</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <link href="main.css" type="text/css" rel="stylesheet">
   </head>
 
@@ -11,5 +11,5 @@
     <h3>Welcome to the Awesome application</h3>
     
 
-  <script type="text/javascript" src="main.js"></script></body>
+  </body>
 </html>
