--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,20 @@
   </head>
 
   <body>
-    <h3>Welcome to the Awesome application</h3>
+    <h1>Tailwind inspired responsive spacing utilities built with SASS</h1>
+
+    <div class="flex m-b-1 md:m-b-3">
+      <div class="demo-box m-r-1"></div>
+      <div class="demo-box m-r-1 md:m-r-3"></div>
+      <div class="demo-box m-r-1 md:m-r-3 lg:m-r-6"></div>
+    </div>
+
+    <div class="demo-box m-b-1"></div>
+    <div class="demo-box m-b-1 md:m-b-3"></div>
+    <div class="demo-box m-b-1 md:m-b-3 lg:m-b-6 xl:m-b-10"></div>
+    <div class="demo-box m-b-1"></div>
+
+
     
 
   </body>
